<resources>
    <string name="app_name">Shuffle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="label_next">NEXT</string>
    <string name="label_pause">PAUSE</string>
    <string name="label_play">PLAY</string>
    <string name="label_previous">PREVIOUS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous_song">Previous Song</string>
    <string name="resume_song">Resume</string>
    <string name="next_song">Next Song</string>
    <string name="sign_out">Sign out</string>
    <string name="nav_bar_greeting">Hey There!</string>
    <string name="songs_string">Songs</string>
    <string name="disliked_string">Disliked</string>
    <string name="liked_string">Liked</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="widget_inactive_string">Launch Shuffle</string>
    <string name="liked_songs_activity_title">Liked Songs</string>
    <string name="disliked_songs_activity_title">Disliked Songs</string>
    <string name="all_songs_activity_title">All Songs</string>
    <string name="no_items_message">No Items Available</string>
    <string name="album_art">Album Art</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="dislike">Dislike</string>

</resources>
